code clean up, working on assets and allocations
